--- a/src/_output.yml
+++ b/src/_output.yml
@@ -4,12 +4,12 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li class="toc-logo"><img src="images/ehi_logo.png" alt="Earth Hologenome Initiative"></li>
-        <li align="center"><b>ANALYSIS WORFLOW</b></li>
+        <li class="toc-logo"><img src="https://www.alberdilab.dk/assets/images/alberdilab-110x110.png" alt="AlberdiLab logo"></li>
+        <li align="center"><b>Alberdi Lab</b></li>
       after: |
-        <li><a href="https://www.earthhologenome.org" target="blank"><b>Earth Hologenome Initiative</b></a></li>
-        <li><a href="https://www.earthhologenome.org/laboratory" target="blank"><b>Laboratory workflow</b></a></li>
-        <li><a href="https://www.earthhologenome.org/bioinformatics" target="blank"><b>Bioinformatics workflow</b></a></li>
+        <li><a href="https://www.alberdilab.dk" target="blank"><b>www.alberdilab.dk</b></a></li>
+        <li><a href="https://www.earthhologenome.org" target="blank"><b>www.earthhologenome.org</b></a></li>
+        <li><a href="https://www.holo-omics.science" target="blank"><b>www.holo-omics.science</b></a></li>
     download: ["pdf", "epub"]
   fig_width: 8
 bookdown::pdf_book:
