--- a/_output.yml
+++ b/_output.yml
@@ -5,7 +5,7 @@ bookdown::gitbook:
     toc:
       before: |
         <li class="toc-logo"><img src="docs/alberdilab_minilogo.png" alt="AlberdiLab logo"></li>
-        <li align="center"><b>Alberdi Lab</b></li>
+        <li align="center"><b>Hernandez et al. 2024</b></li>
       after: |
         <li><a href="https://www.alberdilab.dk" target="blank"><b>www.alberdilab.dk</b></a></li>
         <li><a href="https://www.earthhologenome.org" target="blank"><b>www.earthhologenome.org</b></a></li>
